<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.overnightprojects.kids_in_space.TeacherLoginActivity"
    android:background="@drawable/color_main_background">

    <!-- Login progress -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text"
            android:padding="@dimen/button_padding_large"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/loginTeacherActivityTitle"/>

        <EditText
            android:id="@+id/edittext_teacher_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text"
            android:padding="@dimen/button_padding_large"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:hint="@string/hint_teacher_code"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edittext_marker_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_text"
            android:padding="@dimen/button_padding_large"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:hint="@string/hint_marker_code"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_teacher_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/button_text"
            android:padding="@dimen/button_padding_large"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:background="@color/colorButtonStudent"
            android:textColor="@color/white"
            android:text="@string/action_connect_short" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
