<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nl.overnightprojects.kids_in_space.StudentLoginActivityTEMP"
    android:background="@drawable/color_main_background">

    <!-- Login progress -->

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text"
                android:padding="@dimen/button_padding_large"
                android:layout_margin="@dimen/margin_large"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/loginStudentActivityTitle"/>

            <EditText
                android:id="@+id/edittext_connect_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:hint="@string/hint_code"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="5"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_connect_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_connect_short"
                android:textStyle="bold" />

        </LinearLayout>
</LinearLayout>
